--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.19.7",
+    "@antv/g6": "^4.5.1",
     "@umijs/preset-react": "1.x",
     "cross-env": "^7.0.3",
     "husky": "^6.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-git-info": "^1.1.0",
     "react-countup": "^5.2.0",
