--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/charts": "^1.3.5",
     "@ant-design/pro-layout": "^6.19.7",
     "@antv/g6": "^4.5.1",
     "@umijs/preset-react": "1.x",
