--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ant-design/pro-layout": "^6.19.7",
     "@antv/g6": "^4.5.1",
     "@umijs/preset-react": "1.x",
+    "antd": "^4.18.8",
     "cross-env": "^7.0.3",
     "husky": "^6.0.0",
     "lodash": "^4.17.21",
