--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@antv/g6": "^4.5.1",
     "@umijs/preset-react": "1.x",
     "antd": "^4.18.8",
+    "antd-img-crop": "^4.2.0",
     "cross-env": "^7.0.3",
     "husky": "^6.0.0",
     "lodash": "^4.17.21",
